# tdads

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  changelog.md  conf.py  example.ipynb  make.bat
src/tdads/: PH_utils.py  __init__.py  diagram_utils.py  distance.py  inference.py  kernel.py  machine_learning.py
tests/: test_PH_utils.py  test_diagram_utils.py  test_distance.py  test_inference.py  test_kernel.py  test_machine_learning.py  test_tdads.py
