[tool.poetry]
name = "tdads"
version = "0.1.2"
description = "Data science for topological data analysis"
authors = ["Shael Brown"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
myst-nb = {version = "^1.1.1", python = "^3.9"}
sphinx-autoapi = "^3.1.2"
sphinx-rtd-theme = "^2.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
ripser = "^0.6.8"
gudhi = "^3.9.0"
scipy = "^1.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

